@@ -68,6 +68,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * If an edit summary exceeds 250 bytes and is truncated, add an ellipse
 * (bug 26638) Database error pages display correctly in RTL languages
 * (bug 26187) Confirmrecreate no longer parses the edit summary
+* (bug 25506) Exception is thrown if OutputPage::parse is called inside a tag hook,
+  which would reset parser state
 
 === API changes in 1.18 ===
 * (bug 26339) Throw warning when truncating an overlarge API result
